colored changed to black

--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,7 @@ p.designation {
     overflow: initial;
 }
 div#gallery {
-    background:#01c3c3;
+    background:#000000;
 }
 .port-head {
     text-align: center;
