--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,8 @@ div#myCarousel {
 div#about {
     padding: 5% 0px;
 	text-align: center;
+    background-color: black;
+    color: white;
 }
 h3.center {
     text-align: center;
@@ -140,7 +142,7 @@ h3.center {
     border-radius: 50%;
 	margin: auto;
 	    width: 35%;
-		border: 5px solid #51acec;
+		border: 5px solid #808080;
 }
 .agile-about h4 {
     margin: 3% 0px;
